<resources>
    <string name="app_name">财富锦囊</string>
    <string name="radio_fund_1">我的资产</string>
    <string name="radio_fund_2">基金超市</string>
    <string name="fund_text_1">昨日收益(元)</string>
    <string name="fund_text_2">收益超过了全国- -的用户</string>
    <string name="fund_text_4">持仓收益(元)</string>
    <string name="fund_text_5">未付收益(元)</string>
    <string name="fund_text_6">总资产(元) :</string>
    <string name="fund_text_7">资产明细</string>
    <string name="fund_text_8">您还没有买过任何基金，去基金超市买点试试吧！</string>
    <string name="my_transation_record">交易记录</string>
    <string name="my_asset_analysis">资产分析</string>
    <string name="my_record_details">记录详情</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_loading">加载中...</string>
    <string name="expend">支出报表</string>
    <string name="income">收入报表</string>
    <string name="songguo_title">基金交易服务由松果互联网金融提供</string>
    <string name="songguo_revoke">温馨提示:撤销已提交的申购申请，资金需要T+2个交易日到账。</string>
    <string name="songguo_password_error_title">你的银行卡预留手机号不符，请核对后再试。若你预留的手机号码与现有的不符，请您持身份证在银行柜台修改开卡时预留的手机号码后重试。</string>
    <string name="songguo_password_title">此手机号为当前使用的银行卡预留手机号。如需修改，请到银行卡管理中更换银行卡或前往银行柜台修改预留手机号码。获取更多帮助，请致电财富锦囊客服：400-688-3506</string>
    <string name="title">温馨提示：若需赎回到银行卡，请在赎回确认成功后，从现金宝中转出到银行卡中。</string>
    <string name="sg_guid">基金交易服务由上海长量基金销售投资顾问有限公司提供</string>
    <string name="sg_guid_title">资格编号：000000306</string>
    <string name="StyleEvaluation_title">为便于您了解自身的风险承受能力，选择合适的投资产品和服务，请如实填写以下测评问卷：</string>
    <string name="sg_fx_title">该基金为高风险基金，本人同意并接受超出本人风险承受能力的投资。</string>
    <string name="spin_prompt"> 请选择建议类型 </string>
    <string name="hjlc"> 货基理财服务协议 </string>
    <string name="hjlc_"> 为使上海富友支付服务有限公司（以下简称“富友支付”）自有渠道及其合作渠道客户端个人用户（以下简称“您”或“投资人”）在使用货基理财服务的过程中，能够充分了解自身的权益及责任，请您认真阅读并遵守富友支付与您签署的《货基理财服务协议》（以下简称“本协议”）。
    您可以通过富友自有渠道及其合作渠道客户端的货基理财服务的开户页面点击确认的方式选择接受本协议，以表示您与富友支付已达成协议，并同意接受本协议中全部约定内容及与本协议有关的各项附属协议和涉及本协议条款和条件的有关各种规则。
    其中，请您特别关注并理解本协议中涉及免除或限制富友支付责任、限制用户权利、法律适用等条款。在尚未同意接受本协议前，您不能使用富友支付的货基理财服务。您在富友自有渠道及其合作渠道客户端的货基理财服务的开户页面点击同意接受本协议，即表明您已对本协议的理解和接受，本协议开始产生相应的法律约束力。若您不接受本协议中的任何条款，或者无法充分理解其中任一条款，请您放弃后续操作。
一、定义
•	在本协议及含有以下名词的协议中，除另有规定，下列名词均具有相同定义：
•	1、余额理财服务：指富友支付联合民生加银基金管理有限公司（以下简称“民生加银”）推出的面向富友支付自有渠道及其合作渠道客户端的个人用户的货基理财服务。该服务对接民生加银公募货币基金“民生加银现金宝货币市场基金”（以下简称“民生现金宝货币”，基金代码：000371）。投资人可通过富友提供的货基理财服务向民生加银申购、赎回“民生现金宝货币”基金，并享有持有份额的全部投资收益。使用货基理财服务的用户所申购资金均由民生加银负责管理，富友支付在此过程中仅协助用户提供基金份额申购、赎回、分红的支付结算及份额查询服务。
•	2、身份认证：指为确保投资人资金安全，在投资人开通货基理财服务时，对其用于开通货基理财服务和民生加银基金交易账户的身份信息与其绑定的本人相应的结算银行账户开户身份信息的一致性进行校验。富友支付和民生加银仅接受通过身份认证的投资人的开户申请。身份认证过程涉及到的验证要素包括但不限于：投资人姓名、投资人身份证号码、投资人银行卡卡号、投资人在开户银行预留手机号码等。
•	3、投资人：富友自有渠道及其合作渠道客户端的个人用户
二、服务适用对象及范围
•	1、货基理财服务仅向已注册富友金账户及其合作渠道客户端的个人用户提供。使用货基理财服务的用户在注册富友自有渠道及其合作渠道客户端的个人账户时必须提供真实、准确及完整的身份认证材料，并通过富友支付的身份认证审核。
•	2、在您成为富友自有渠道及其合作渠道客户端的个人用户后，且使用货基理财服务时，如果富友支付发现或有合理理由怀疑您提供的注册资料或身份认证要素不合法、不真实、不准确、不完整或已过有效期限，富友支付有权立即中止（或终止）向您提供服务，并拒绝您现在或者未来使用货基理财服务的全部或部分功能，对此富友支付不承担任何责任，由此给您造成的任何直接或间接的损失、费用、处罚由您自行承担。若由于您未及时更新您的身份信息，而导致本服务异常或本服务的有关流程及操作发生任何错误，由此造成的任何损失由您自行承担。
三、功能介绍
•	您使用货基理财服务可以实现以下功能，具体以您申请开通或使用货基理财服务的过程中富友支付实际提供为准。富友支付保留适时变更服务的权利，具体以富友支付发布的公告为准。
•	1、货基理财服务的资金转入：货基理财服务资金的转入实际为民生加银货币型基金“民生现金宝货币”的份额购买。货基理财服务通过富友支付系统与民生加银系统对接，依据投资人指令，以富友自有渠道或其合作渠道客户端账户中可用余额申购民生加银“民生现金宝货币”的基金份额，并由民生加银向你提供资金理财服务。对于首次使用货基理财服务的投资人，民生加银将依据富友支付传递的，投资人提供并经认证的身份信息，为其开立基金交易账户。
•	2、货基理财服务的资金转出：货基理财服务资金的转出实际为民生加银货币型基金 “民生现金宝货币”中已确认的基金份额的赎回。货基 理财服务通过富友支付系统与民生加银系统对接，依据投资人指令，赎回投资人持有的民生加银 “民生现金宝货币”基金份额，并将相应资金（包括收益）划付至投资人余额理财账户余额中。
四、使用须知
•	1、您了解并同意，富友支付有权采取各种必要手段对您的身份真实性进行验证。同时，富友支付可以据此决定向您提供服务的范围、种类、业务操作权限及额度限制。为保障您的资金安全，富友支付有权依据您的身份类别、身份认证措施、交易风险度等因素的不同设定相应的安全策略。
•	2、身份认证要素是富友支付识别投资者的依据，投资者必须妥善保管，不得将身份认证要素提供给任何第三方或交于任何第三方使用。使用上述身份要素所发出的一切指令均视为投资者本人所为，投资者应对此产生的后果负责。对非富友支付原因造成的账户、密码等信息被冒用、盗用或非法使用，由此引起的一切风险、责任、损失、费用等应由投资者自行承担。
•	3、您知悉并同意在您使用货基理财服务时，富友支付有权将您的个人信息（包括但不限于：姓名、身份证号、手机号、邮箱、联系地址等）提供给民生加银。您同意民生加银有权将您的个人信息（包括但不限于您在金融机构的账号、交易信息、资产状况等）提供给富友支付。
•	4、您知悉并同意，您开通余额理财服务的同时即开通民生加银基金交易账户。
•	5、您知悉并同意，您网上提交的资金划转委托，以银行系统与富友支付系统记录为准；您提交的基金产品交易委托以相应的金融机构的系统记录为准。您在货基理财服务中可以查询到您持有基金产品的份额、收益、交易明细等，但该数据仅供参考用，所有数据应以民生加银系统数据为准。
•	6、富友支付仅向投资者提供资金支付渠道，富友支付并非基金产品购买协议的参与方，不对基金产品购买协议的协议方的任何口头、书面陈述或者向任何第三方上传的线上信息之真实性、合法性做任何明示或暗示的担保，或对此承担任何连带责任，不对相关金融机构及任何第三方的法定义务和/或契约责任承担任何连带责任。富友支付亦无义务参与基金产品协议交易资金划转及支付环节之外的任何赔偿、纠纷处理等活动。
•	7、您知悉并同意，包括货基理财服务在内的任何金融产品均存在一定的风险，且您自愿承担该风险。除富友支付应提供的涉及基金支付结算、基金份额查询服务之外的任何关于金融产品的业务咨询、投诉或纠纷均由金融机构自行处理，与富友支付无关。
五、服务费用
•	当您使用货基理财服务时，富友支付有权向您收取相关服务的费用。同时，富友支付保留指定及调整服务费的权利。具体收费标准以货基理财页面公示为准。目前，富友支付向您提供货基理财服务的免费转入和免费转出服务，直至富友支付通过公司网站或货基理财服务的产品页面发布收费公告的方式通知您。如收取服务费用，您授权富友支付从您的交易款项中实时扣除该费用。
六、损失赔偿
•	若您未违反《货基理财服务协议》且因不能归责于您的任何原因，造成您在使用货基理财服务时因资金支付遭受损失（投资损失及金融机构造成的损失外）向富友支付申请补偿。
        发生损失后，您应立即通知富友支付并按要求提交相关的申请材料和证明文件，并采取相应措施防止损失进一步扩大。在接收到您的申请通知和证明文件后，富友支付有权基于自身的独立判断对您进行评估并决定是否向您提供补偿。富友支付最终向您提供的补偿的行为并不代表资金损失归责于富友支付，亦不代表富友支付需为此承担其他任何责任。您同意，富友支付在向您提供补偿的同时，即代位取得您向第三方追偿的权利，且您不再就上述已经让渡给富友支付的债权向该第三方主张任何权利，亦不再就损失向富友支付主张任何权利。
        此外，您同意如您在接受富友支付补偿后，从其他渠道挽回了前述资金损失或有新证据证明您涉嫌欺诈，或者发生您应当执行承担责任的其他情形，你应向富友支付立即返还补偿您的款项，否则，富友支付有权从您的富友账户中直接扣除相应款项。
七、免责事由
•	1、在使用富友支付提供的货基理财服务过程中，可能遇到不可抗拒力等风险因素，使货基理财服务发生中断。不可抗拒力指不能预见、不能克 服、不可避免且对一方或双方造成重大影响的客观事件，包括但不限于洪水、地震、瘟疫和风暴等自然灾害以及战争、动乱、政府行为等社会事件。出现上述情况时，富友支付将努力在第一时间与相关单位配合及时进行修复，但由此给你造成的损失富友支付在法律允许的范围内免责。
•	2、在法律允许的范围内，富友支付对以下情况导致的服务中断或受阻不承担责任：
o	（1）受到计算机病毒、木马或者其他恶意程序、黑客攻击的破坏；
o	（2）用户或富友支付的电脑软件、系统、硬件和通信线路出现故障；
o	（3）用户操作不当；
o	（4）用户通过非富友支付授权的方式使用货基理财服务；
o	（5）银行系统或银行的网络出现故障；
o	（6）其他富友支付无法控制或者合理预见的情形。
•	3、您在使用货基理财服务的过程中，富友支付不对以下风险担责：
o	（1）来自他人匿名或者冒名的含有威胁、诽谤、令人反感或者非法内容的信息；
o	（2）遭受到他人误导、欺骗或其他导致任何心理、生理上的伤害以及经济上的损失。
•	4、您在使用货基理财的服务过程中，富友支付在法律规定的范围内可处理违法违规内容，但其不构成富友支付的义务或承诺。
八、暂停、中断或终止服务
•	1、富友支付有权基于业务调整或者风险管控需要，暂停、中断或终止向您提供余额理财服务。
•	2、富友支付在发现您有可疑交易时，有权不经通知暂停、中断或终止向您提供货基理财服务。
•	3、富友支付发现您违反本协议约定时，有权暂停、中断或终止向您提供货基理财服务。
九、法律适用
•	1、本协议签订地为中华人民共和国上海市浦东新区。
•	2、本协议的成立、生效、履行、解释及纠纷解决，适用于中华人民共和国大陆地区法律（不包括冲突法）。
•	3、您和富友支付因本协议产生的任何纠纷或争议的，首先应该友好协商解决；出现无法协商的情况，您同意将纠纷或争议提交至本协议签订地的人民法院解决
十、补充说明
•	1、本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义解释的依据。
•	2、本协议与富友支付网站上其他条款和规则中的名词解释、意思理解，可互相引用参照，如有不同理解，应以本协议为准。
•	3、富友支付有权在必要时修改本协议条款。您可以在常见问题相关页面查阅最新版本的协议条款。本协议条款变更后，如果您继续使用富友支付提供的软件或服务，即视为您已接受修改后的协议。如果您不接受修改后的协议，应当停止使用富友支付提供的软件或服务。
•	4、如果您就余额理财服务中所涉及相关事宜（包括但不限于支付、资金流转、富友支付账户安全、资金及收益查询等）有任何疑问的，您可登陆富友支付网站（ https://www.fuiou.com）或拨打客服热线（400-6677-333）咨询。
 </string>
    <string name="msjj"> 民生加银基金网上销售协议 </string>
    <string name="msjj_"> 本协议是民生加银基金管理有限公司（以下简称“本公司”或“民生加银基金”）与投资者(以下简称“您”或“投资者”)就您于本公司网上交易直销自助式前台进 行相关操作的有关事项所订立的有效合约。投资者通过网络页面点击确认或以其他方式选择接受本协议，即表示投资者与本公司已达成协议并同意接受本协议的全部 约定内容以及与本协议有关的各项规则及本公司网站所包含的其他与本协议或本协议项下各项规则的条款和条件有关的各项规定。
    在接受本协议之前，请您仔细阅读本协议的全部内容。如果您不同意本协议的任意内容，或者无法准确理解本公司对条款的解释，请不要进行后续操作。
    为给使用上海富友支付服务有限公司（以下简称“富友支付”）金账户管理系统（以下简称“金账户”） 及其合作渠道客户端的个人账户（以下简称“理财账户”）理财服务，民生加银基金为富友支付的金账户及其合作渠道客户端个人用户定制了民生加银现金宝货币市场基金（以下简称“民生货币基金”）与金账户理财服务对接。同时，为方便用户操作，民生加银基金与上海富友支付服务有限公司达成合作协议，在金账户及其合作渠道客户端页面设置民生加银基金网上交易直销自助式前台，便于富友支付的金账户及其合作渠道客户端个人用户通过金账户及其合作渠道客户端页面发起民生加银基金直销账户的开立以及民生货币基金申购、赎回的申请。
  鉴于金账户及其合作渠道客户端的用户自愿接受理财服务，并自愿通过民生加银基金在金账户页面前置的网上交易直销自助式前台进行基金开户、账户查询、发起民生货币基金的交易申请等操作，您与民生加银基金根据国家有关法律、法规及相应规定达成如下协议：
第一条 释义
•	1、网上交易直销自助式前台：是指民生加银基金在金账户及其合作渠道客户端页面内置的网上交易直销自助式前台，以下简称“网上直销自助式前台”。网上直 销自助式前台的业务内容目前包括基金开户、账户登记，民生货币基金的申购（转入）、赎回（转出和支付等）、交易申请查询、基金行情查询、份额余额查询等， 其他业务开通以本公司公告为准。
•	2、投资者：是指接受货基理财服务并且申请开立民生加银基金直销账户的金账户及其合作渠道客户端用户。
•	3、民生货币基金：是指由民生加银基金管理有限公司依法募集及管理，并于2013年10月18日正式成立的民生加银现金宝货币市场基金（基金代码：000371）。
•	4、基金账户：是指基金注册登记机构给投资者开立的用于记录投资者持有的由该注册登记机构登记注册的开放式基金份额变动及结余情况的账户。本基金账户的注册登记机构为民生加银基金。
•	5、基金交易账户：是指民生加银基金为投资者开立的记录其民生加银基金所管理开放式基金的基金份额的变动及结余情况的账户。
•	6、申购：是指基金合同生效后，投资者向民生加银基金提出申请购买基金份额的行为。投资者通过网上直销自助式前台提交申购（含转入）申请，即为投资者向民生加银基金发起基金份额申购申请。
•	7、赎回：是指基金合同生效后，投资者向民生加银基金提出申请卖出基金份额的行为。投资者通过网上直销自助式前台提交赎回（含转出、）申请，即为投资者向民生加银基金发起基金份额赎回申请。其中，金账户及其合作渠道客户端的个人用户卖出基金份额所得款项只能到达投资者理财账户。
•	8、身份认证要素：指在交易中金账户及本公司用于识别投资者身份的信息要素，包括但不限于投资者的金账户账号、密码、数字证书、动态口令、支付盾、签约时设置的电话号码、手机号码等及本公司认可的其他要素。
•	9、T 日是指民生加银基金确认投资者有效申请的工作日。
•	10、T ＋ n 日是指自 T 日起第 n 个工作日（不包含 T 日）。
•	11、开放日是指民生加银基金为投资者办理基金申购、赎回等业务的工作日。
•	12、D日是指自然日。
第二条 基金账户的开立
•	1、凡是满足证券投资基金合法投资者要求的金账户及其合作渠道客户端的用户可以通过网上直销自助式前台开立基金账户。凡是通过网上直销自助式前台进行开户操作的金账户及其合作渠道客户端的用户，需同时接受《货基理财服务协议》。金账户及其合作渠道客户端的用户完成直销交易账号的开立后，将成为民生加银基金投资者。
•	2、投资者首次通过网上直销自助式前台开立基金账户的，其基金账户开户申请将于T+1日确认，确认成功后，投资者将获得基金账号。投资者的基金账号开立成功与否以民生加银基金确认结果为准。
第三条 安全验证机制
•	1、投资者发出的指令（含实时指令及预授权指令）将被合理确信为基于投资者本人真实意思表示向民生加银基金发出的指令。鉴于如果预授 权指令是经投资者授权由第三方向民生加银基金发出的指令，则投资者对该指令的真实、准确及完整性负责，且民生加银基金不承担因正确执行上述指令所产生的法 律后果，因此，投资者应妥善保管身份认证要素。
•	2、投资者在发起赎回（转出等）等类型交易申请时，需要根据网上直销自助式前台提示输入身份认证要素等信息及进行其他身份验证操作，民生加银基金直销后台系统根据验证结果处理投资者的交易申请。
•	3、由于投资者自身的原因导致身份认证要素泄露而引起的损失由投资者承担。
第四条 申购（含转入）申请
•	1、投资者可通过网上直销自助式前台提出民生货币基金的申购申请。网上直销自助式前台申购单笔最高金额和每日最高金额以民生加银基金业务规则的相关规定为准。
•	2、投资者当日申购申请与资金支付的受理截止时间为T 日15：00，如投资者在T日15：00后进行申购资金支付，则申请将按下一个工作日的申请处理。投资者委托申请的时间以民生加银基金系统自动记载时间为准。
•	3、民生加银基金为方便投资者，在网上直销自助式前台提供转入操作服务，投资者在进行操作时须遵守民生加银基金的相应业务规则。
第五条 赎回（含转出）申请
•	1、投资者可通过网上直销自助式前台提出民生货币基金的赎回申请。赎回份额的数额限制以民生加银基金业务规则的相关规定为准。
•	2、投资者当日赎回申请受理截止时间为T 日15：00，如投资者在T日15：00后提交交易申请，则其申请将按下一个工作日的申请处理。投资者委托申请的时间以民生加银基金系统自动记载时间为准。
•	3、民生加银基金为方便投资者，赎回的资金实时回到理财账户，投资者可根据自己意愿并在遵守民生加银基金业务规则的前提下选择该服务。
第六条 赎回资金处理
•	1、投资者可通过网上直销自助式前台提出民生货币基金的转出至理财账户申请。投资者知晓并同意，投资者D日向民生加银基金提交转出回到理财账户申请时，若申请符合业务规则的相关规定，则民生加银基金受理投资者申请，同时回到理财账户的份额将过户给富友支付或民生加银基金并进行赎回处理。从投资者提交转出至理财账户申请之日（自然日，含当日）起，对应过户给富友支付或民生加银基金的基金份额损益归富友支付或民生加银基金所有。
•	2、因投资者的原因，包括但不限于有权机关要求冻结、扣划货币基金份额等情形，导致用于转出至 理财账户的份额赎回申请不能及时被确认，过户给富友支付的份额赎回款不能到账，或由于其他原因导致过户份额赎回款不能及时到账等情况，投资者应承担向富友支 付偿还过户份额对应款项及相应损失的责任。
•	3、如因理财账户或者对应银行系统故障、系统升级，或投资者理财账户已销户、账户状态不正常（挂 失、冻结），或民生加银基金合作的划款银行或者支付机构暂停服务，或自然灾害等不可抗力事件，或其他不可预见的非常情况，或网络、通讯故障等非民生加银基金原因导致过户份额对应的款项无法按期向投资者划付的，民生加银基金不承担任何责任。
第七条 变更分红方式
•	投资者不能通过民生加银基金网上交易直销自助式前台变更民生货币基金的分红方式。民生货币基金的分红方式必须为红利再投。
第八条 申请撤销
•	民生加银基金网上直销自助式前台暂不提供申购（转入）申请、赎回（转出、支付等）申请的撤销服务。
第九条 账户查询
•	为更好为投资者提供服务，投资者知晓并同意，民生加银基金通过网上直销自助式前台为投资者提供本人的基金投资信息查询服务。
第十条 风险测评
•	投资者知晓并同意，由于货币基金相比股票型、债券型和混合型基金，属于基金中的低风险品种，投资者具备投资低风险基金品种的风险承受能力，因此通过网上直销自助式前台进行民生货币基金的相关交易时，系统默认投资者为最低风险承受能力类型。
第十一条 风险
•	1、为确保网络传输的安全，保障投资者的利益，民生加银基金对网络资料的传输采用数据加密处理，但民生加银基金无法保证网上信息传 输绝对安全、毫无错误或指定网址不被恶意攻击或不存在因电子病毒所导致的故障等等。如发生前述情形，民生加银基金不承担任何责任，投资者须自行承担因网上 交易可能导致的任何风险及损失。
•	2、网上直销自助式前台的查询功能如因数据传输、更新等原因发生延误，投资者需以民生加银基金记载数据为准。
•	3、民生加银基金有权保留投资者网上交易的相关电子数据以作为投资者交易的证明。
•	4、任何通过安全验证后提交的申请都将被合理确信或视为投资者本人的真实意思表示或投资者合法授权的行为，该等行为所引起的法律后果由该投资者承担。
•	5、由于提供资金结算途径的银行或第三方支付机构的系统或者人为原因，导致资金到账迟滞等问题，民生加银基金将协调尽快解决，但不承担赔偿责任。
•	6、因民生加银基金过错原因（包括但不限于民生加银基金系统漏洞、执行指令操作错误、记账错误等），给投资者造成损失的，由民生加银基金承担赔偿责任。
第十二条 客服通道
•	如投资者对民生货币基金相关事宜（包括但不限于投资风险，申购、认购及赎回流程，份额登记，分红等）有任何疑问的，可登陆民生加银基金网站http://www.msjyfund.com.cn/，或拨打民生加银基金客服热线400-8888-388咨询。
第十三条 协议的效力及变更
•	1、在不损害投资者利益的前提下，民生加银基金保留修改或增补本协议内容的权利。本协议的修改文本将公告于民生加银基金的网站及营 业场所或以其他民生加银基金认为可行的方式通知。投资者在修改通知公布之日起十日内未向民生加银基金提出书面异议，视同已经得到投资者的认可，但民生加银 基金增加服务内容除外。
•	2、本协议书签署后，若有关法律法规和《基金合同》、《招募说明书》或其他民生加银基金和投资者应共同遵守的文件发生修订，本协议与之不相适应的内容及条款自行失效，但本协议其他内容和条款继续有效。
•	3、本协议没有约定的，适用《民生加银基金管理有限公司网上直销业务规则》的约定。
第十四条 纠纷的解决办法
•  双方如有争议，应尽可能通过协商、调解解决，协商、调解不成，任何一方均有权向上海仲裁委员会申请仲裁，仲裁按照该委员会届时有效的仲裁规则进行。仲裁裁决是终局的，对双方均有法律约束力。

 </string>
    <string name="fxts"> 风险提示 </string>
    <string name="fxts_"> 现金宝是购买民生加银基金公司发行并销售的民生加银现金宝货币市场基金，购买货币市场基金不等于将资金作为存款存放在银行或者存款类金融机构；基金管理人民生加银基金公司承诺以诚实信用、勤勉尽责的原则管理和运用基金资产，但不保证基金一定盈利，也不保证最低收益，请投资者谨慎选择 </string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_update_exit">退出</string>
    <string name="cp_sujestion_info_1">\t\t欢迎您提出宝贵的意见，您留下的每个字都将用来改善我们的软件。</string>
    <string name="cp_sujestion_info_2">\t\t如有各类使用咨询请直接拨打95534-6转互联网业务。</string>
    <string name="cp_sujestion_hint">请输入您的反馈意见...(500字内)</string>
    <string name="cp_sujestion_hint_phone">请输入您的手机号码</string>
    <string name="cp_btn_submit">提交</string>
    <string name="cp_hint_bankcard">请输入您的银行卡号</string>
    <string name="cp_txt_getSupportBank"><u>查看支持银行列表</u></string>
    <string name="cp_btn_nextstep">下一步</string>
</resources>