<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cpay_title_bg" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:background="@drawable/chinapay_return_click" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/cpay_logo" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="14dip"
                android:layout_marginTop="20dip"
                android:lineSpacingExtra="5dip"
                android:text="@string/cp_sujestion_info_1"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="14dip"
                android:lineSpacingExtra="5dp"
                android:text="@string/cp_sujestion_info_2"
                android:textColor="#454545"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_sujestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/cpay_help_input"
                android:gravity="top"
                android:hint="@string/cp_sujestion_hint"
                android:maxLength="500"
                android:maxLines="10"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/cpay_input"
                android:hint="@string/cp_sujestion_hint_phone"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textSize="15sp" />

            <Button
                android:id="@+id/sujestion_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/chinapay_enter_click"
                android:text="@string/cp_btn_submit"
                android:textColor="@color/cp_light_white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>