<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cpay_title_bg" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:background="@drawable/chinapay_return_click" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/cpay_logo" />
        
       <Button
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:background="@drawable/chinapay_help_click" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- 6225220115251753 4218717000681229 6200482013601530 -->

            <EditText
                android:id="@+id/et_bankcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/cpay_input"
                android:hint="@string/cp_hint_bankcard"
                android:inputType="number"
                android:maxLength="19"
                android:singleLine="true"
                android:text=""
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10.0dip" >

                <TextView
                    android:id="@+id/txt_getSupportBankList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/cp_txt_getSupportBank"
                    android:textColor="#ffff0000" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/chinapay_enter_click"
                android:text="@string/cp_btn_nextstep"
                android:textColor="@color/cp_light_white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>