<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_x0.8"
    android:id="@+id/rl_sg_buy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/red"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:src="@drawable/ic_goback" />

            <TextView
                android:id="@+id/tv_type_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="@dimen/dimens_x2sp"
                android:gravity="center"
                android:singleLine="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_operate_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_x0.8"
            android:padding="@dimen/dimens_x1dp"
            android:textSize="@dimen/dimens_x1.6sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="@dimen/dimens_x1dp">

            <TextView
                android:id="@+id/tv_purchase_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="金额"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_x1.6sp"/>

            <EditText
                android:padding="@dimen/space"
                android:id="@+id/ed_money"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_x1dp"
                android:hint="最低申购金额￥1"
                android:inputType="phone"
                android:textSize="@dimen/dimens_x1.6sp"
                android:background="@drawable/bg_dialog_ed"/>

            <TextView
                android:id="@+id/tv_allout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="全部转出"
                android:gravity="right"
                android:visibility="gone"
                android:textSize="@dimen/dimens_x1.6sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_payment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="支付方式"
            android:background="@color/gray_x0.8"
            android:padding="@dimen/dimens_x1dp"
            android:textSize="@dimen/dimens_x1.6sp"/>

        <RelativeLayout
            android:id="@+id/rl_payment_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dimens_x1dp">

            <ImageView
                android:id="@+id/iv_bank_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_toRightOf="@+id/iv_bank_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dimens_x1dp"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tv_bank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_x1.6sp" />
                <TextView
                    android:id="@+id/tv_bank_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:paddingRight="@dimen/dimens_x1dp"
            android:paddingLeft="@dimen/dimens_x1dp"
            android:paddingTop="@dimen/dimens_x1dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_x1dp">

            <CheckBox
                android:id="@+id/cb_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_checkbox"
                android:checked="true"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_x1dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:background="@color/gray_x0.8"/>

            <TextView
                android:id="@+id/tv_agreement_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sg_fx_title"
                android:layout_marginLeft="@dimen/dimens_x1dp"
                android:layout_gravity="center"/>
        </LinearLayout>


        <Button
            android:id="@+id/b_buy_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确认转入"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_x2sp"
            android:background="@drawable/bg_dialog_button_"
            android:paddingBottom="@dimen/dimens_x1dp"
            android:paddingTop="@dimen/dimens_x1dp"
            android:paddingLeft="@dimen/dimens_x5dp"
            android:paddingRight="@dimen/dimens_x5dp"
            android:layout_marginTop="@dimen/dimens_x2dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/dimens_x1dp"
        android:paddingRight="@dimen/dimens_x1dp"
        android:paddingBottom="@dimen/dimens_x2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sg_guid"
            android:gravity="center"/>
        <TextView
            android:layout_marginTop="@dimen/dimens_x0.5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sg_guid_title"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>